<resources>
    <string name="app_name">Calculator</string>
    <string name="_9">9</string>
    <string name="Mul">*</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="Sub">-</string>
    <string name="Mod">%</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="Add">+</string>
    <string name="_0">0</string>
    <string name="Dot">.</string>
    <string name="Equal">=</string>
    <string name="x">x</string>
    <string name="c">C</string>
    <string name="CutBtn">CutBtn</string>
    <string name="_4">4</string>
    <string name="_div">/</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="about">About</string>
    <string name="history">History</string>
    <string name="OpeningBrackets">(</string>
    <string name="ClosingBrackets">)</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="equation">Equation</string>
    <string name="result">Result</string>
    <string name="current_expression">Current Expression</string>
</resources>
